issue of not be able to generate the app.js file was fixed and file is now generated

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Annie <nsab42@yahoo.com>"
   ],
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/asonna/doctor-lookup-javascript",
   "ignore": [
     "**/.*",
     "node_modules",
